--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,9 @@
-@media screen and (max-width:450px) {
-    main {
-        display: grid;
-        text-align: center;
-        grid-column: 1;
-    }
-}
-
-@media screen and (min-width:450px) {
-    main {
-        display: grid;
-        grid-template-columns: repeat(auto-fill, 20em);
-        text-align: center;
-    }
-}
-
 body {
     background: rgb(2, 0, 36);
     background: linear-gradient(319deg, rgba(2, 0, 36, 1) 20%, rgba(8, 8, 57, 1) 62%, rgba(27, 14, 41, 1) 92%);
     color: antiquewhite;
+    font-family: serif;
+    /*CUSTOM FONT HERE*/
 }
 
 header {
@@ -25,11 +11,26 @@ header {
     padding-top: 1.15em;
     padding-bottom: 2em;
     font-weight: bold;
-    font-family: sans-serif; /*CUSTOM FONT HERE*/
+}
+
+@media screen and (max-width:600px) {
+    main {
+        display: grid;
+        grid-column: 1;
+        place-items: center;
+    }
+}
+
+@media screen and (min-width:600px) {
+    main {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 20em);
+        place-items: center;
+    }
 }
 
 article {
-    display: flex;
+    display: grid;
     max-width: 250px;
     padding: 1.2em;
 
@@ -47,5 +48,6 @@ article {
 }
 
 .text {
-    max-width: 70%;
+    max-width: 250px;
+    text-align: center;
 }
