--- a/styles/style.css
+++ b/styles/style.css
@@ -13,7 +13,7 @@ header {
     font-weight: bold;
 }
 
-@media screen and (max-width:600px) {
+@media (min-width:320px) {
     main {
         display: grid;
         grid-column: 1;
@@ -21,14 +21,28 @@ header {
     }
 }
 
-@media screen and (min-width:600px) {
+@media (min-width:641px){
+    main{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        place-items:center;
+    }
+}
+@media (min-width:961px) {
     main {
         display: grid;
-        grid-template-columns: repeat(auto-fill, 20em);
+        grid-template-columns: repeat(3, 1fr);
         place-items: center;
     }
 }
 
+@media (min-width:1025px){
+    main {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        place-items: center;
+    }
+}
 article {
     display: grid;
     max-width: 250px;
