--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,15 @@ article {
     border-radius: 5px;
 }
 /*shows the border of each card*/
+
+a{
+    text-decoration: none;
+    color: antiquewhite;
+    font-family: serif; /*CUSTOM FONT HERE*/
+    cursor: grabbing;
+}
+/*removes text decoration and makes it look like plain text, also makes the cursor like a paw*/
+
 .foto img {
     max-width: 250px;
     max-height: 250px;
