--- a/styles/style.css
+++ b/styles/style.css
@@ -112,15 +112,13 @@ a {
 /*centers text, makes the max width of it 250px, this makes it fit perfectly under the picture*/
 
 img{
-animation: img 0.75s infinite;
+animation: img 5s infinite ease-in-out;
 }
 
 @keyframes img {
-    0% { transform: rotate(0deg); }
-    25% { transform: rotate(5deg); }
-    50% { transform: rotate(0deg); }
-    75% { transform: rotate(-5deg); }
-    100% { transform: rotate(0deg); }
+    0% { transform: rotate(-5deg); }
+    50% { transform: rotate(20deg); }
+    100% { transform: rotate(-5deg); }
   }
 
 /*Animates the image swing*/
