--- a/styles/style.css
+++ b/styles/style.css
@@ -15,12 +15,6 @@ body {
     font-family: indieflower;
 }
 
-header {
-    text-align: center;
-    padding-top: 1.15em;
-    padding-bottom: 2em;
-    font-weight: bolder;
-}
 
 @media (min-width:320px) {
     main {
@@ -64,10 +58,13 @@ header {
 
 
 header {
-    background-color: black;
-    color: white;
+    background-color: #000000;
+    background-image: url("https://www.transparenttextures.com/patterns/black-linen-2.png");
+    color: #e0868d;
     text-align: right;
     padding-right: 2.5em;
+    margin-top: 0;
+    top:0;
 }
 
 /*Header changes like text right color etc*/
@@ -92,7 +89,7 @@ article {
 
 a {
     text-decoration: none;
-    color: #000F55;
+    color: #e0868d;
     font-weight: bolder;
     font-family: indieflower;
     cursor: grabbing;
@@ -108,8 +105,9 @@ a {
 .text {
     max-width: inherit;
     text-align: center;
-    background-color: black;
-    color: white;
+    background-color: #000000;
+    background-image: url("https://www.transparenttextures.com/patterns/black-linen-2.png");
+    color: #e0868d;
 
 }
 
