--- a/styles/style.css
+++ b/styles/style.css
@@ -7,6 +7,7 @@
     src: url('/assets/indie-flower-v21-latin-regular.woff2') format('woff2');
 }
 
+/*Font imported front google API*/
 body {
     background: rgb(235, 249, 250);
     background: linear-gradient(194deg, rgba(235, 249, 250, 1) 0%, rgba(205, 228, 239, 1) 12%, rgba(132, 166, 214, 1) 50%, rgba(67, 130, 187, 1) 80%, rgba(32, 91, 147, 1) 100%);
@@ -15,7 +16,7 @@ body {
     margin: 0;
 }
 
-
+/*Body changes like backbround font margins and font*/
 @media (min-width:320px) {
     main {
         display: grid;
@@ -84,7 +85,7 @@ article {
 
 .content {
     background-color: #e6f4f5;
-    border: 1px solid black;
+    border: 1px solid #A15D98;
     border-radius: 0.3em;
 }
 
@@ -116,7 +117,8 @@ a {
 /*centers text, makes the max width of it 250px, this makes it fit perfectly under the picture*/
 
 img {
-    animation-direction: paused;
+    animation: img 2s infinite ease-in-out;
+    animation-direction: reverse;
 }
 
 a:hover img,
