--- a/styles/style.css
+++ b/styles/style.css
@@ -11,8 +11,7 @@
 
 /*Font imported front google API*/
 body {
-    background: rgb(235, 249, 250);
-    background: linear-gradient(194deg, rgba(235, 249, 250, 1) 0%, rgba(205, 228, 239, 1) 12%, rgba(132, 166, 214, 1) 50%, rgba(67, 130, 187, 1) 80%, rgba(32, 91, 147, 1) 100%);
+    background-color: #F8F0E5;
     font-weight: bold;
     font-family: 'Indie Flower', cursive;    margin: 0;
 }
@@ -65,8 +64,8 @@ body {
 
 nav {
     display: grid;
-    background-color: #E4CEE0;
-    color: #A15D98;
+    background-color: #DAC0A3;
+    color: #0F2C59;
     position: sticky;
     top: 0;
     text-align: right;
@@ -85,8 +84,8 @@ article {
 /*spacing, and max width of each card*/
 
 .content {
-    background-color: #e6f4f5;
-    border: 1px solid #A15D98;
+    background-color: #EADBC8;
+    border: 1px solid #6E8387;
     border-radius: 0.3em;
 }
 
@@ -94,7 +93,7 @@ article {
 
 a {
     text-decoration: none;
-    color: #A15D98;
+    color: #0F2C59;
     font-weight: bolder;
     font-family: 'Indie Flower', cursive;    cursor: grabbing;
 }
@@ -110,8 +109,8 @@ a {
 .text {
     max-width: inherit;
     text-align: center;
-    background-color: #E4CEE0;
-    color: #A15D98;
+    background-color: #DAC0A3;
+    color: #0F2C59;
 }
 
 /*centers text, makes the max width of it 250px, this makes it fit perfectly under the picture*/
