--- a/styles/style.css
+++ b/styles/style.css
@@ -11,66 +11,43 @@
 
 /*Font imported front google API*/
 body {
-    background-color: #F8F0E5;
+    background-color: #140D21;
     font-weight: bold;
-    font-family: 'Indie Flower', cursive;    margin: 0;
+    font-family: 'Indie Flower', cursive;    
+    margin: 0;
+    padding-bottom: 8em;
 }
-
-/*Body changes like backbround font margins and font*/
-@media (min-width:320px) {
-    main {
-        display: grid;
-        grid-column: 1;
-        place-items: center;
-        padding-top: 5em;
-    }
-}
-
-/*Makes it so that there is 1 row on small devices*/
-
-@media (min-width:641px) {
-    main {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        place-items: center;
-        padding-top: 5em;
-    }
-}
-
-/*Makes it so that there are 2 rows on tablets and landscape phones*/
-
-@media (min-width:961px) {
-    main {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        place-items: center;
-        padding-top: 5em;
-    }
-}
-
-/*Makes it so that there are 3 rows on small laptops, landscape tablets*/
-
-@media (min-width:1025px) {
-    main {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        place-items: center;
-        padding-top: 5em;
-    }
-}
-
-/*Makes it so that there are 4 rows on bigger screens*/
-
 
 nav {
     display: grid;
-    background-color: #DAC0A3;
-    color: #0F2C59;
+    /*background-color: #DAC0A3;*/
+    font-family: 'Inter', sans-serif;
+    font-family: 'Oleo Script', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    text-transform: uppercase;
+    color: white;
+
     position: sticky;
     top: 0;
     text-align: right;
     padding-right: 5em;
     z-index: 1;
+}
+
+nav h1 {
+    margin: 1.2em 0 0 0;
+    font-size: 5em;
+    line-height: 1em;
+    text-decoration: underline;
+    text-decoration-color: #e67284;
+    text-underline-offset: 8px;
+
+}
+
+nav h2 {
+    font-size: 2em;
+    font-weight: 200;
 }
 
 /*Header changes like text right color etc*/
@@ -84,9 +61,9 @@ article {
 /*spacing, and max width of each card*/
 
 .content {
-    background-color: #EADBC8;
-    border: 1px solid #6E8387;
     border-radius: 0.3em;
+    height: 23em;
+
 }
 
 /*shows the border of each card*/
@@ -94,23 +71,48 @@ article {
 a {
     text-decoration: none;
     color: #0F2C59;
-    font-weight: bolder;
-    font-family: 'Indie Flower', cursive;    cursor: grabbing;
+    font-family: 'Inter', sans-serif;
+    font-family: 'Oleo Script', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 200;
+}
+
+h3 {
+    text-transform: uppercase;
 }
 
 /*removes text decoration and makes it look like plain text, also makes the cursor like a paw*/
+.foto {
+    background-color: #3486AD;
+    border-radius: 5px;
+    
+}
+
+.pink {
+    background-color: #e67284;
+
+}
+
+.green {
+    background-color: #42834c;
+
+}
+
+.lavender {
+    background-color: #c683bb;
+}
 
 .foto img {
     max-width: 250px;
     max-height: 250px;
+    margin-top: -50px;
 }
 
 /*makes the pictures 250px x 250px*/
 .text {
     max-width: inherit;
     text-align: center;
-    background-color: #DAC0A3;
-    color: #0F2C59;
+    color: white;
 }
 
 /*centers text, makes the max width of it 250px, this makes it fit perfectly under the picture*/
@@ -149,3 +151,88 @@ a:focus-within img {
 }
 
 /*Animates the image swing*/
+
+
+
+/*Body changes like backbround font margins and font*/
+@media (min-width:320px) {
+    main {
+        display: grid;
+        grid-column: 1;
+        place-items: center;
+        padding-top: 5em;
+        text-align: center;
+    }
+
+    nav {
+        padding-left: 5em;
+        position: relative;
+    }
+
+    nav h1, h2 {
+        text-align: center;
+        
+    }
+}
+
+/*Makes it so that there is 1 row on small devices*/
+
+@media (min-width:641px) {
+    main {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        place-items: center;
+        padding-top: 5em;
+    }
+
+    nav {
+        padding-left: 5em;
+        position: relative;
+    }
+
+    nav h1, h2 {
+        text-align: center;
+        
+    }
+
+
+}
+
+/*Makes it so that there are 2 rows on tablets and landscape phones*/
+
+@media (min-width:961px) {
+    main {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        place-items: center;
+        padding-top: 5em;
+    }
+    nav {
+        position: sticky;
+    }
+
+    nav h1, h2 {
+        text-align: right;
+    }
+}
+
+/*Makes it so that there are 3 rows on small laptops, landscape tablets*/
+
+@media (min-width:1025px) {
+    main {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        place-items: center;
+        padding-top: 5em;
+    }
+
+    nav {
+        position: sticky;
+    }
+
+    nav h1, h2 {
+        text-align: right;
+    }
+}
+
+/*Makes it so that there are 4 rows on bigger screens*/
