--- a/styles/style.css
+++ b/styles/style.css
@@ -171,7 +171,7 @@ a:focus-within img {
 
     nav h1, h2 {
         text-align: center;
-        
+        font-size: 1.7em;
     }
 }
 
@@ -192,7 +192,7 @@ a:focus-within img {
 
     nav h1, h2 {
         text-align: center;
-        
+        font-size: 2em;
     }
 
 
@@ -213,6 +213,7 @@ a:focus-within img {
 
     nav h1, h2 {
         text-align: right;
+        font-size: 3em;
     }
 }
 
@@ -232,6 +233,7 @@ a:focus-within img {
 
     nav h1, h2 {
         text-align: right;
+        font-size: 4.5em;
     }
 }
 
